# telegram-rag

./: .gitignore  Dockerfile  README.md  archi.drawio  pyproject.toml
infra/: .terraform.lock.hcl  aws.tf  datastax.tf  main.tf  variables.tf
rag_service/data/: test_messages.json
rag_service/src/: api.py  app.py  db_client.py  llm_helper.py  main.py
rag_service/src/templates/: index.html
scripts/: build_rag.sh  build_tele.sh
tele_service/src/: config.py  main.py  main_telegram.py
